[package]
name = "damm"
version = "0.1.0"
description = "calculates and validates Damm checksums"
repository = "https://github.com/sloshwoven/damm-rs"
readme = "README.md"
keywords = ["Damm", "checksum"]
categories = ["algorithms"]
authors = ["sloshwoven <slosh.woven@gmail.com>"]
license = "BSD3"

[dependencies]
try_from = "0.2.0"
